--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,10 @@
     }
   },
   "require": {
-    "illuminate/console": "~8.82",
-    "illuminate/filesystem": "~8.82",
+    "illuminate/console": "v6.20.44",
+    "illuminate/filesystem": "v6.20.44",
     "ramsey/uuid": "^4.2.3",
-    "symfony/process": "^5.4"
+    "symfony/process": "v4.4.44"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "~3.6.2"
